Several changes to support UWP. Added assets to UWP. Updated NeoModules packages and refractoring. Fixed address scanner in UWP.

--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/SendView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/SendView.xaml
@@ -54,9 +54,14 @@
                         <ffimageloadingsvg:SvgCachedImage Grid.Row="0"
                                                           VerticalOptions="Start" 
                                                           HorizontalOptions="End"
-                                                          Source="camera.svg"
                                                           Grid.Column="0" HeightRequest="20"
                                                           WidthRequest="20">
+                            <ffimageloadingsvg:SvgCachedImage.Source>
+                                <OnPlatform x:TypeArguments="ImageSource">
+                                    <On Platform="Android, iOS" Value="camera.svg" />
+                                    <On Platform="UWP" Value="Assets/camera.svg" />
+                                </OnPlatform>
+                            </ffimageloadingsvg:SvgCachedImage.Source>
                             <ffimageloadingsvg:SvgCachedImage.Transformations>
                                 <fftransformations:TintTransformation EnableSolidColor="true"
                                                                       HexColor="{StaticResource TintIconColor}" />
