More UWP development

--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -40,6 +40,7 @@
             <converters:AssetValueChangeToIconConverter x:Key="AssetValueChangeToIconConverter"/>
             <converters:UtcToLocalTimeConverter x:Key="UtcToLocalTimeConverter"/>
             <converters:DraftMissingFieldsConverter x:Key="DraftMissingFieldsConverter"/>
+            <converters:ImageSourceUwpConverter x:Key="ImageSourceUwpConverter"/>
 
             <!-- FONTS -->
 
