--- a/PhantasmaMail/PhantasmaMail/Controls/InboxMessageCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/InboxMessageCell.xaml
@@ -8,8 +8,8 @@
     xmlns:controls="clr-namespace:PhantasmaMail.Controls;assembly=PhantasmaMail"
     x:Key="InboxMessageCell"
     x:Name="customFrame">
-    <controls:CustomFrame Margin="20,10" CornerRadius="0" HasShadow="True">
-        <Grid RowSpacing="7" ColumnSpacing="0">
+    <controls:CustomFrame Margin="20,10" CornerRadius="0" HasShadow="True" BackgroundColor="White">
+        <Grid RowSpacing="7" ColumnSpacing="0" Margin="3,3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
