--- a/PhantasmaMail/PhantasmaMail/Controls/SentMessageCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/SentMessageCell.xaml
@@ -4,7 +4,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
       xmlns:effects="clr-namespace:PhantasmaMail.Effects;assembly=PhantasmaMail"
       x:Class="PhantasmaMail.Controls.SentMessageCell">
-    <Frame Margin="20,10" CornerRadius="0" HasShadow="True">
+    <Frame Margin="20,10" CornerRadius="0" HasShadow="True" BackgroundColor="White">
         <Grid RowSpacing="7" ColumnSpacing="0" Margin="3,3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
