--- a/PhantasmaMail/PhantasmaMail/Views/MessageDetailView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/MessageDetailView.xaml
@@ -50,6 +50,7 @@
             <Frame Grid.Row="0" IsClippedToBounds="True" 
                    Margin="10,-5,10,1" Opacity="0.8" 
                    HasShadow="True"
+                   BackgroundColor="White"
                    CornerRadius="0" Padding="0" />
 
             <Frame Grid.Row="0"
@@ -57,6 +58,7 @@
                    Margin="0,10,0,0"
                    CornerRadius="0"
                    HasShadow="True"
+                   BackgroundColor="White"
                    HorizontalOptions="FillAndExpand"
                    VerticalOptions="FillAndExpand">
                 <Grid Margin="5" RowSpacing="5">
