--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/SendView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/SendView.xaml
@@ -31,9 +31,11 @@
                 <Frame Grid.Row="0" IsClippedToBounds="True"
                        Margin="30,15,30,1" Opacity="0.8"
                        HasShadow="True"
+                       BackgroundColor="White"
                        CornerRadius="0" Padding="0" />
 
                 <Frame Grid.Row="0"
+                       BackgroundColor="White"
                        Margin="20,30,20,0">
                     <Grid>
                         <Grid.RowDefinitions>
