--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/WalletView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/WalletView.xaml
@@ -52,11 +52,13 @@
             <Frame Grid.Row="0" IsClippedToBounds="True"
                    Margin="30,15,30,1" Opacity="0.8"
                    HasShadow="True"
+                   BackgroundColor="White"
                    CornerRadius="0" Padding="0" />
 
 
             <Frame Grid.Row="0"
                    CornerRadius="0"
+                   BackgroundColor="White"
                    Margin="20,30,20,0">
                 <StackLayout HorizontalOptions="FillAndExpand">
                     <Label Text="Current Balance" 
